2010-05-01  Murray Cumming  <murrayc@murrayc.com>

	Python Glom API documentation improvement.
	
	* glom/python_embed/python_module/py_glom_module.cc: Turn off auto-writing 
	of the Python signatures in the docstrings, because that is a) crappy and 
	b) confuses the sphinx autodoc module, which adds an invisible ..function 
	reStrucuredText line.
	Add :param:, :type, and :returns: lines with the necessary indenting and 
	empty lines needed by that invisible ..function line. 

2010-05-01  Murray Cumming  <murrayc@murrayc.com>

	Fix document saving (recently broken by me) and add a test for it.

	* glom/libglom/document/bakery/document.cc: write_to_disk():
	Do not fail if the parent directory already exists.
	* Makefile_tests.am:
	* tests/test_document_autosave.cc: Added a test of document saving and 
	autosaving.

2010-05-01  Murray Cumming  <murrayc@murrayc.com>

	Move tests out of sub-directories, simplifying the build file.

	* tests/Makefile_test.am:
	* tests/test_document_load.cc:
	* tests/test_selfhosting_new_empty.cc: Move out of the sub-directories,
	because they do not need extra files.

2010-04-27  Murray Cumming  <murrayc@murrayc-x61>

	PyGlom: Don't use deprecated boost::python::args.
	
	* glom/python_embed/python_module/py_glom_module.cc: Use boost::python::arg() 
	instead of boost::python::args(), because I noticed that args is deprecated.

1.14.1:

2010-04-27  Murray Cumming  <murrayc@murrayc.com>

	Make sure all glade-instantiated windows have the Glom icon.

	* glom/glade_utils.h: helper_get_glade_widget_derived_with_warning():
    Call set_icon_name() on windows, fixing my regression.

2010-04-27  Murray Cumming  <murrayc@murrayc-desktop>

    Documentation: Added libglom main page. Installed _sources for pyglom.

	* docs/pyglom_reference/Makefile.am: Also install html/_sources, used by search.
	* glom/libglom/init.h: Add a doxygen main page.

2010-04-26  Murray Cumming  <murrayc@murrayc.com>

	Fix the build.
